spacing fixes

--- a/css/style.css
+++ b/css/style.css
@@ -180,7 +180,7 @@ nav ul.nav {
   font-size: 2rem;
 }
 #overview .buttons {
-  margin-top: 40px;
+  margin-top: 25px;
 }
 
 #faq .question:nth-child(even) {
